Adding style to the html file

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="Title">Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/hamburger.html">Hamburger</a></li>
-        <li><a href="recipes/burrito.html">Burrito</a></li>
-        <li><a href="recipes/ramen.html">Ramen</a></li>
+        <li class="list"><a href="recipes/hamburger.html" class="links">Hamburger</a></li>
+        <li class="list"><a href="recipes/burrito.html" class="links">Burrito</a></li>
+        <li class="list"><a href="recipes/ramen.html" class="links">Ramen</a></li>
     </ul>
 </body>
 </html>
