Added the home button to all files

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburger</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1>Hamburger</h1>
+    <a href="../index.html">Home</a>
+
+    <h1 class="Title">Hamburger</h1>
     <img src="hamimg.jpg" alt="A Hamburger">
     <h2>Description</h2>
     <p>A hamburger, also called a burger, is a dish consisting of fillings—usually a patty of ground meat,
