--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramen</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1>Japanese Ramen</h1>
+    <a href="../index.html">Home</a>
+    <h1 class="Title">Japanese Ramen</h1>
     <img src="ramenimg.webp" alt="A Bowl of Ramen">
     <h2>Description</h2>
     <p>Ramen is a Japanese noodle dish. It consists of Chinese-style wheat noodles served in a broth; common flavors are
