--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burrito</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1>Burrito</h1>
+    <a href="../index.html">Home</a>
+    <h1 class="Title">Burrito</h1>
     <img src="burritoimg.webp" alt="A Burrito">
     <h2>Description</h2>
     <p>This delicious breakfast burrito with potatoes and chorizo will take your breakfast game up a notch. The rich
