The landing page (index.html) has been styled.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="Title">Odin Recipes</h1>
-    <ul>
-        <li class="list"><a href="recipes/hamburger.html" class="links">Hamburger</a></li>
-        <li class="list"><a href="recipes/burrito.html" class="links">Burrito</a></li>
-        <li class="list"><a href="recipes/ramen.html" class="links">Ramen</a></li>
-    </ul>
+    <h1 id="Title-main">Odin Recipes</h1>
+    <h2 id="opening-line"><span style="color: #ff008c; font-family: monospace;">Confused</span> about what to eat today?</h2>
+    <p id="intro-para">We have a lot of different options for you to pick from. Choose the dish you like.</p>
+    <div class="ribbon">
+        <ul style="margin-left: 160px; display: inline-block; margin-top: 60px;">
+            <li class="list"><a href="recipes/hamburger.html" class="links">Hamburger</a></li>
+            <li class="list"><a href="recipes/burrito.html" class="links">Burrito</a></li>
+            <li class="list"><a href="recipes/ramen.html" class="links">Ramen</a></li>
+        </ul>    
+    </div>
 </body>
 </html>
