Hamburger has been styled

--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burrito</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="burrito.css">
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <button id="home-button"><a href="../index.html" style="display: block; text-decoration: none;">Home</a></button>
+
     <h1 class="Title">Burrito</h1>
     <img src="burritoimg.webp" alt="A Burrito">
     <h2>Description</h2>
