--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -4,52 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburger</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>Hamburger Recipe</title>
+    <link rel="stylesheet" href="hamburger.css">
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <button id="home-button"><a href="../index.html" style="display: block; text-decoration: none;">Home</a></button>
 
-    <h1 class="Title">Hamburger</h1>
-    <img src="hamimg.jpg" alt="A Hamburger">
+    <h1 class="Title">Hamburger Recipe</h1>
+    <img src="hamimg.jpg" alt="A tasty Hamburger" style="display: block;" class="ham-img">
     <h2>Description</h2>
-    <p>A hamburger, also called a burger, is a dish consisting of fillings—usually a patty of ground meat,
+    <p class="description">A hamburger, also called a burger, is a dish consisting of fillings—usually a patty of ground meat,
         typically beef—placed inside a sliced bun or bread roll. The patties are often served with cheese,
         lettuce, tomato, onion, pickles, bacon or chilis with condiments such as ketchup, mustard, mayonnaise,
         relish or a "special sauce", often a variation of Thousand Island dressing and are frequently placed on
-        sesame seed buns.
-        A hamburger patty topped with cheese is called a cheeseburger.</p>
+        sesame seed buns. A hamburger patty topped with cheese is called a cheeseburger.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>2 red apples, cored (such as Fuji, Gala, or Pink Lady)</li>
-        <li>1 pound ground beef</li>
-        <li>1/4 cup fine dry breadcrumbs</li>
-        <li>1 tablespoon plus 2 teaspoons chili crisp, divided, plus more for serving </li>
-        <li>1/2 teaspoon salt</li>
-        <li>2 (1/3-inch) slices red onion</li>
-        <li>4 hamburger buns</li>
-        <li>1/4 cup mayonnaise</li>
+        <li class="ingredients">2 red apples, cored (such as Fuji, Gala, or Pink Lady)</li>
+        <li class="ingredients">1 pound ground beef</li>
+        <li class="ingredients">1/4 cup fine dry breadcrumbs</li>
+        <li class="ingredients">1 tablespoon plus 2 teaspoons chili crisp, divided, plus more for serving </li>
+        <li class="ingredients">1/2 teaspoon salt</li>
+        <li class="ingredients">2 (1/3-inch) slices red onion</li>
+        <li class="ingredients">4 hamburger buns</li>
+        <li class="ingredients">1/4 cup mayonnaise</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Slice 1 apple using a mandoline slicer to create 8 (1/4-inch-thick) slices. Shred any remaining scraps plus
+        <li class="steps">Slice 1 apple using a mandoline slicer to create 8 (1/4-inch-thick) slices. Shred any remaining scraps plus
             all or part of the second apple to get 1/2 cup shredded apple. Squeeze shredded apple to extract some of the
             moisture. Reserve any remaining apple for another use. </li>
-        <li>Preheat an outdoor grill to medium heat (350 to 375 degrees F (175 to 190 degrees C)).
+        <li class="steps">Preheat an outdoor grill to medium heat (350 to 375 degrees F (175 to 190 degrees C)).
 
         </li>
-        <li>Combine ground beef, breadcrumbs, 1 tablespoon chili crisp, salt, and the 1/2 cup shredded apple in a bowl.
+        <li class="steps">Combine ground beef, breadcrumbs, 1 tablespoon chili crisp, salt, and the 1/2 cup shredded apple in a bowl.
             Shape into 4 (1/2-inch-thick) patties, 4 inches in diameter. Mixture may be wet so be sure to tightly pack
             patties.
         </li>
-        <li>Oil the grill grate. Grill patties, covered, carefully turning halfway through, until an instant-read
+        <li class="steps">Oil the grill grate. Grill patties, covered, carefully turning halfway through, until an instant-read
             thermometer inserted into centers of patties reads 160 degrees F (71 degrees C), 10 to 13 minutes. Grill
             onion slices, turning halfway through, 8 to 10 minutes. Grill apple slices, turning halfway through, 4 to 5
             minutes. If you like, grill buns, cut sides down, until toasted, 1 to 2 minutes. When onions are cool enough
             to handle, separate rings.
         </li>
-        <li>Stir mayonnaise and remaining 2 teaspoons chili crisp together in a small bowl. Spread buns with mayonnaise
+        <li class="steps">Stir mayonnaise and remaining 2 teaspoons chili crisp together in a small bowl. Spread buns with mayonnaise
             mixture and fill with patties, onion, and apple slices. Serve with additional chili crisp
         </li>
     </ol>
