--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -4,53 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burrito</title>
+    <title>Burrito Recipe</title>
     <link rel="stylesheet" href="burrito.css">
 </head>
 
 <body>
     <button id="home-button"><a href="../index.html" style="display: block; text-decoration: none;">Home</a></button>
 
-    <h1 class="Title">Burrito</h1>
-    <img src="burritoimg.webp" alt="A Burrito">
+    <h1 class="Title">Burrito Recipe</h1>
+    <img src="burritoimg.webp" alt="A Burrito" style="display: block;" class="burrito-img">
     <h2>Description</h2>
-    <p>This delicious breakfast burrito with potatoes and chorizo will take your breakfast game up a notch. The rich
+    <p class="description">This delicious breakfast burrito with potatoes and chorizo will take your breakfast game up a notch. The rich
         flavors will have you coming back for more. Serve with a side of salsa, sour cream, and fruit.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>1/2 pound fresh chorizo</li>
-        <li>1/2 poblano pepper, chopped
+        <li class="ingredients">1/2 pound fresh chorizo</li>
+        <li class="ingredients">1/2 poblano pepper, chopped
         </li>
-        <li>1/2 yellow onion, chopped
+        <li class="ingredients">1/2 yellow onion, chopped
         </li>
-        <li>1/2 red bell pepper, chopped
+        <li class="ingredients">1/2 red bell pepper, chopped
         </li>
-        <li>2 Yukon gold potatoes, cut into bite-sized pieces
+        <li class="ingredients">2 Yukon gold potatoes, cut into bite-sized pieces
         </li>
-        <li>4 large eggs
+        <li class="ingredients">4 large eggs
         </li>
-        <li>1/3 cup half-and-half
+        <li class="ingredients">1/3 cup half-and-half
         </li>
-        <li>salt and pepper to taste
+        <li class="ingredients">salt and pepper to taste
         </li>
-        <li>2 tablespoons butter or olive oil
+        <li class="ingredients">2 tablespoons butter or olive oil
         </li>
-        <li>1/4 cup shredded cheese, any kind
+        <li class="ingredients">1/4 cup shredded cheese, any kind
         </li>
-        <li>4 burrito-sized flour tortillas
+        <li class="ingredients">4 burrito-sized flour tortillas
         </li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Heat a large skillet over medium heat. Add chorizo, poblano pepper, onions, and red bell pepper. Cook until vegetables are tender, 5 to 7 minutes. Remove skillet from heat.</li>
-        <li>In a microwave-safe bowl, cook potatoes with a small amount of water until fork tender, 7 to 10 minutes, stirring halfway through; drain. Stir potatoes into chorizo mixture.        </li>
-        <li>Meanwhile, whisk eggs, half-and-half, salt, and pepper together in a large bowl.
+        <li class="steps">Heat a large skillet over medium heat. Add chorizo, poblano pepper, onions, and red bell pepper. Cook until vegetables are tender, 5 to 7 minutes. Remove skillet from heat.</li>
+        <li class="steps">In a microwave-safe bowl, cook potatoes with a small amount of water until fork tender, 7 to 10 minutes, stirring halfway through; drain. Stir potatoes into chorizo mixture.        </li>
+        <li class="steps">Meanwhile, whisk eggs, half-and-half, salt, and pepper together in a large bowl.
 
         </li>
-        <li>Heat butter in a skillet over medium heat. Add egg mixture and scramble until eggs are cooked, about 3 minutes. Remove eggs from heat. Fold in cheese.
+        <li class="steps">Heat butter in a skillet over medium heat. Add egg mixture and scramble until eggs are cooked, about 3 minutes. Remove eggs from heat. Fold in cheese.
 
         </li>
-        <li>Spoon chorizo mixture in a line across the middle of a tortilla, then add a layer of scrambled eggs. Fold opposing edges of the tortilla to overlap the filling. Roll 1 of the opposing edges around the filling creating a burrito.
+        <li class="steps">Spoon chorizo mixture in a line across the middle of a tortilla, then add a layer of scrambled eggs. Fold opposing edges of the tortilla to overlap the filling. Roll 1 of the opposing edges around the filling creating a burrito.
         </li>
     </ol>
 </body>
