--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -4,65 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramen</title>
+    <title>Ramen Recipe</title>
     <link rel="stylesheet" href="ramen.css">
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
-    <h1 class="Title">Japanese Ramen</h1>
-    <img src="ramenimg.webp" alt="A Bowl of Ramen">
+    <button id="home-button"><a href="../index.html" style="display: block; text-decoration: none;">Home</a></button>
+
+    <h1 class="Title">Japanese Ramen Recipe</h1>
+    <img src="ramenimg.webp" alt="A Bowl of Ramen" class="ramen-img">
     <h2>Description</h2>
-    <p>Ramen is a Japanese noodle dish. It consists of Chinese-style wheat noodles served in a broth; common flavors are
+    <p class="description">Ramen is a Japanese noodle dish. It consists of Chinese-style wheat noodles served in a broth; common flavors are
         soy sauce and miso, with typical toppings including sliced pork, nori, menma, and scallions. Ramen has its roots
         in Chinese noodle dishes and is a part of Japanese Chinese cuisine.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>4 cups water
+        <li class="ingredients">4 cups water
         </li>
-        <li>8 ounces sliced fresh mushrooms
+        <li class="ingredients">8 ounces sliced fresh mushrooms
         </li>
-        <li>1 bunch green onions, thinly sliced, divided
+        <li class="ingredients">1 bunch green onions, thinly sliced, divided
 
         </li>
-        <li>1 large carrot, sliced
+        <li class="ingredients">1 large carrot, sliced
 
         </li>
-        <li>½ yellow onion, sliced
+        <li class="ingredients">½ yellow onion, sliced
 
         </li>
-        <li>2 tablespoons soy sauce
+        <li class="ingredients">2 tablespoons soy sauce
 
         </li>
-        <li>2 tablespoons minced garlic
+        <li class="ingredients">2 tablespoons minced garlic
 
         </li>
-        <li>1 tablespoon sriracha sauce
+        <li class="ingredients">1 tablespoon sriracha sauce
 
         </li>
-        <li>1 teaspoon sesame oil
+        <li class="ingredients">1 teaspoon sesame oil
 
         </li>
-        <li>1 teaspoon rice wine vinegar
+        <li class="ingredients">1 teaspoon rice wine vinegar
 
         </li>
-        <li>½ teaspoon ground white pepper
+        <li class="ingredients">½ teaspoon ground white pepper
 
         </li>
-        <li>½ teaspoon cracked black pepper
+        <li class="ingredients">½ teaspoon cracked black pepper
 
         </li>
-        <li>2 (3 ounce) packages chicken-flavored ramen noodles
+        <li class="ingredients">2 (3 ounce) packages chicken-flavored ramen noodles
 
         </li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Combine water, mushrooms, 1/2 the green onions, carrot, onion, soy sauce, garlic, Sriracha sauce, sesame
+        <li class="steps">Combine water, mushrooms, 1/2 the green onions, carrot, onion, soy sauce, garlic, Sriracha sauce, sesame
             oil, rice wine vinegar, white pepper, black pepper, and flavor packets from ramen in a large pot. Bring to a
             boil. Add noodles and cook, occasionally stirring, until noodles are tender yet firm to the bite, about 5
             minutes.</li>
-        <li>Reduce heat to a simmer and cook until vegetables are tender, about 10 minutes. Serve topped with remaining
+        <li class="steps">Reduce heat to a simmer and cook until vegetables are tender, about 10 minutes. Serve topped with remaining
             green onions.</li>
     </ol>
 </body>
